--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,19 @@
     <meta name="description" content="Enhance your e-commerce site with Shoupapp LProductWriter. Automatically
     generate high-quality, SEO-friendly product descriptions from images and live listing links. Completely free
      to use with no data collection. Contact us for custom integrations." />
+
     <!-- Other head elements -->
+    <meta name="author" content="Vural">
+    <link rel="icon"  href="{% static 'favicon.ico' %}">
+    <meta property="og:title" content="AI-Powered Product and SEO Description Generator" />
+    <meta property="og:description" content="Enhance your e-commerce site with Shoupapp LProductWriter. Automatically
+    generate high-quality, SEO-friendly product descriptions from images and live listing links. Completely free
+     to use with no data collection. Contact us for custom integrations." />
+    <meta property="og:image" content="{% static 'logomainreduce.png' %}" />
+    <meta property="og:image:width" content="200" />
+    <meta property="og:image:height" content="200" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
