--- a/templates/index.html
+++ b/templates/index.html
@@ -157,6 +157,7 @@ pre {
           <div class="form-group">
             <div id="additional-elements" style="display: none;">
               <div class="row mt-4">
+                  <span>For best results, write the relevant title with the image</span>
                 <div class="col-md-6">
                   {% bootstrap_field form.image %}
                 </div>
